// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList tests on web:  should render an article list item 1`] = `
<a
  href="www.test-example.com"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div
    className="responsive-styles__component-fbPFZZ fXCtkJ"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div>
        <div
          className="articleListImage"
        >
          <div>
            <div
              style={
                Object {
                  "display": "table",
                  "height": 0,
                  "overflow": "hidden",
                  "paddingBottom": "66.66666666666667%",
                }
              }
            >
              <img
                alt=""
                src=""
                style={
                  Object {
                    "display": "block",
                    "position": "absolute",
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
              />
              <div>
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="articleListContent"
        >
          <div>
            <div>
              <div
                dir="auto"
                style={
                  Object {
                    "fontSize": "12px",
                    "fontWeight": "400",
                    "letterSpacing": "1.2px",
                  }
                }
              >
                TESTLABEL
              </div>
            </div>
            <h3
              aria-level="3"
              dir="auto"
              role="heading"
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": "400",
                  "lineHeight": "22px",
                  "marginBottom": "5px",
                }
              }
            >
              test headline
            </h3>
            <div
              dir="auto"
              style={
                Object {
                  "fontFamily": "TimesDigitalW04",
                  "lineHeight": "20px",
                }
              }
            >
              <span
                dir="auto"
              >
                
                Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab it for Nazi Germany
                ...
              </span>
            </div>
            <div
              aria-label="datePublication"
              data-testid="datePublication"
              dir="auto"
              style={
                Object {
                  "lineHeight": "15px",
                  "marginBottom": "5px",
                }
              }
            >
              Invalid Date, The Times
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ArticleList tests on web:  should render an article list item loading state 1`] = `
<div
  className="responsive-styles__component-fbPFZZ fXCtkJ"
>
  <div>
    <div
      className="articleListImage"
    >
      <div>
        <div
          style={
            Object {
              "display": "table",
              "height": 0,
              "overflow": "hidden",
              "paddingBottom": "66.66666666666667%",
            }
          }
        >
          <img
            alt=""
            src=""
            style={
              Object {
                "display": "block",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          />
          <div>
            <div
              style={
                Object {
                  "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="articleListContent"
    >
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ArticleList tests on web:  should render an article list item without images 1`] = `
<a
  href="www.test-example.com"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div
    className="responsive-styles__component-fbPFZZ fXCtkJ"
  >
    <div
      className="responsive-styles__component-fbPFZZ woNlo"
    >
      <div>
        <div
          className="articleListContent"
        >
          <div
            className="responsive-styles__component-fbPFZZ dQznFS"
          >
            <div>
              <div>
                <div
                  dir="auto"
                  style={
                    Object {
                      "fontSize": "12px",
                      "fontWeight": "400",
                      "letterSpacing": "1.2px",
                    }
                  }
                >
                  TESTLABEL
                </div>
              </div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                test headline
              </h3>
              <div
                dir="auto"
                style={
                  Object {
                    "fontFamily": "TimesDigitalW04",
                    "lineHeight": "20px",
                  }
                }
              >
                <span
                  dir="auto"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab it for Nazi Germany and Britain failed
                  ...
                </span>
              </div>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Invalid Date, The Times
              </div>
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ jwwxoJ"
          >
            <div>
              <div>
                <div
                  dir="auto"
                  style={
                    Object {
                      "fontSize": "12px",
                      "fontWeight": "400",
                      "letterSpacing": "1.2px",
                    }
                  }
                >
                  TESTLABEL
                </div>
              </div>
              <h3
                aria-level="3"
                dir="auto"
                role="heading"
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": "400",
                    "lineHeight": "22px",
                    "marginBottom": "5px",
                  }
                }
              >
                test headline
              </h3>
              <div
                dir="auto"
                style={
                  Object {
                    "fontFamily": "TimesDigitalW04",
                    "lineHeight": "20px",
                  }
                }
              >
                <span
                  dir="auto"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab
                  ...
                </span>
              </div>
              <div
                aria-label="datePublication"
                data-testid="datePublication"
                dir="auto"
                style={
                  Object {
                    "lineHeight": "15px",
                    "marginBottom": "5px",
                  }
                }
              >
                Invalid Date, The Times
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ArticleList tests on web:  should render an article list page error correctly 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexBasis": "50%",
      "maxWidth": 548,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 35,
        "marginBottom": "10px",
        "marginTop": "20px",
        "textAlign": "center",
      }
    }
  >
    Something's gone wrong
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 18,
        "textAlign": "center",
      }
    }
  >
    We can't load the page you have requested. Please check your network connection and retry to continue
  </Text>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 300,
        "paddingBottom": "10px",
        "paddingTop": "40px",
        "width": 200,
      }
    }
  >
    <TouchableOpacity
      accessibilityLabel="Retry"
      accessible={true}
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#006699",
            "flex": 1,
            "height": 44,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFF",
              "fontFamily": "GillSansMTStd-Medium",
            }
          }
        >
          RETRY
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ArticleList tests on web:  should render the article list item separator keyline correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
    }
  }
/>
`;

exports[`ArticleList tests on web:  should render the article list page error correctly 1`] = `
<PageErrorContainer>
  <ArticleListError
    refetch={[Function]}
  />
  <PageErrorImageContainer>
    <TimesImage
      aspectRatio={0.9090909090909091}
      uri="https://www.thetimes.co.uk/d/img/internal-error-c45d0e8347.png"
    />
  </PageErrorImageContainer>
</PageErrorContainer>
`;

exports[`ArticleList tests on web:  should render the article list pagination correctly 1`] = `
<div>
  <div>
    <div
      className="responsive-styles__component-fbPFZZ ldBdZT"
    >
      <div
        className="responsive-styles__component-fbPFZZ exZFAC"
      >
        <div
          data-testid="results-message"
          dir="auto"
        >
          Showing 1 - 10 of 20 results
        </div>
      </div>
      <div
        className="responsive-styles__component-fbPFZZ cePhpb"
      >
        <div />
        <div>
          <a
            href="?page=2"
            onClick={[Function]}
            style={
              Object {
                "textDecoration": "none",
              }
            }
          >
            <div
              data-testid="pagination-button-next"
            >
              <div
                dir="auto"
              >
                <span
                  dir="auto"
                >
                  Next
                  <span
                    className="responsive-styles__component-fbPFZZ hqaoTY"
                    dir="auto"
                  >
                     page
                  </span>
                </span>
              </div>
              <svg
                height={12}
                width={7}
              >
                <g
                  fill="#006699"
                >
                  <path />
                </g>
              </svg>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
